--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+  text-align: center;
+}
+
+#featured-property{
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+#featured-property p{
+  width: 800px;
+  text-align: center;
+}
+nav{
+  text-align: center;
+}
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+figcaption{
+  font-stretch: ultra-condensed;
+  text-align: center;
+}
+#details div{
+  float: left;
+  background-color: red;
+  text-align: center;
+  margin:auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
